--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -10,3 +10,7 @@ block content
         input(name="password", type="password", required, placeholder="Password")
         input(name="password2", type="password", required, placeholder="Confirm Password")
         input(type="submit", value="Join")
+    hr
+    div 
+        span Already have an account? 
+        a(href="/login") Log in now &rarr; 
