--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,7 +1,9 @@
 extends base
 
 block content 
-    form(method="POST", action="/photos/upload")
+    form(method="POST", action="/photos/upload", enctype="multipart/form-data")
+        label(for="photos") Photos 
+        input(type="file", id="main-photo", name="main", accept="image/*")
         input(placeholder="Title", required, type="text", name="title")
         input(placeholder="Description", required, type="text", name="description")
         input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
