--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -2,8 +2,8 @@ extends base
 
 block content 
     h4 Change Photo's setting 
-    form(method="POST", enctype="multipart/form-data")
-        input(type="file", id="main-photo", name="main", accept="image/*", value=photo.mainphotoUrl)
+    form(method="POST", action=`/edit`, enctype="multipart/form-data")
+        input(type="file", id="main-photo", name="main", accept="image/*", value=photo.main, required)
         input(name="title", placeholder="Title", value=photo.title, required)
         input(placeholder="Description", required, type="text", name="description", value=photo.description)
         input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags", value=photo.hashtags.join())
