--- a/src/views/mixins/photo.pug
+++ b/src/views/mixins/photo.pug
@@ -1,5 +1,7 @@
 mixin photo(photo)
     div
+        img(src="/"+photo.mainphotoUrl, width=100, height=100)
+       
         h4 
             a(href=`/photos/${photo.id}`)=photo.title
         p=photo.description
