--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,31 +1,45 @@
+include mixins/message
+
 doctype html
 html(lang="ko")
     head
         title #{pageTitle} | Bijou
-        link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+        //- link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet", href="/assets/css/styles.css")
+        link(rel="stylesheet", href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css')
+    //-body(oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onkeydown="return false")
     body
-    header
-        h1=pageTitle
-        nav
-            ul
-                li
-                    a(href="/") Home
-                if loggedIn 
+        if messages.error 
+            +message("error", messages.error)
+        if messages.info 
+            +message("info", messages.info)
+        div.header
+            section.header_logo 
+                a(href="/")
+                    h1 BIJOU  
+            section.navigation
+                ul
+                    if loggedIn 
+                        li 
+                            a(href="/users/edit") Edit Profile |
+                        li 
+                            a(href="/users/logout") LogOut |
+                        li 
+                            a(href=`/users/${loggedInUser._id}`) My Profile |
+                    else
+                        li
+                            a(href="/join")  Join |
+                        li 
+                            a(href="/login") Login |
+
                     li 
-                        a(href="/users/edit") Edit Profile
+                        a(href="/photos/upload") Upload |
                     li 
-                        a(href="/users/logout") Log Out
-                    li 
-                        a(href="/my-profile") #{loggedInUser.name}'s profile
-                    li 
-                        a(href="/photos/upload") Upload 
-                else
-                    li
-                        a(href="/join")  Join
-                    li 
-                        a(href="/login") Login
-                li 
-                    a(href="/search") Search
+                        a(href="/search") Search
         main
-            block content
+            div.photo-container
+                block content
+        hr
         include partials/footer.pug
+        script(src="/assets/js/main.js")
+        
