--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,6 +1,7 @@
 extends base.pug
 
 block content 
+    img(src="/" + photo.mainphotoUrl)
     div 
         p=photo.description
         p=photo.price
