--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -3,6 +3,12 @@ extends base
 block content 
     h4 Change Photo's setting 
     form(method="POST", action=`/photos/${photo.id}/edit`, enctype="multipart/form-data")
+        label 
+            h4 메인 이미지
+        input(name="main", type="file")
+        br
+        label 
+            h4 상세 정보
         input(name="title", placeholder="Title", value=photo.title, required)
         input(placeholder="Description", required, type="text", name="description", value=photo.description)
         input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags", value=photo.hashtags.join())
