--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -3,7 +3,10 @@
 
 // Screens
 @import "./screens/home.scss";
-
+@import "./screens/footer.scss";
+@import "./screens/watch.scss";
+@import "./screens/terms.scss";
+@import "./screens/payment.scss";
 
 // Defaults
 * {
@@ -11,13 +14,21 @@
   padding: 0;
   box-sizing: border-box;
   min-width: 0;
+  image-rendering: -webkit-optimize-contrast;
+  transform: translateZ(0);
+  backface-visibility: hidden;
 }
 html,
 body {
   height: 100%;
   width: 100%;
   word-wrap: break-word;
-  font-size: larger;
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+body, input, button, select, textarea, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .purchase span {
+  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans CJK KR', 'Noto Sans KR', '나눔바른고딕', '나눔고딕', '맑은고딕', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !important;
 }
 
 a {
@@ -33,7 +44,8 @@ section>ul>li {
 
 
 .header, footer {
-  height: 10vh;
+  height: 100;
+  min-height: 10vh;
 }
 
 .header {
@@ -98,3 +110,24 @@ footer {
     color: white;
   }
 }
+
+.list-unstyled {
+  padding-left: 0;
+  list-style: none;
+}
+
+ul, ol {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
