--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -7,6 +7,7 @@ html(lang="ko")
         //- link(rel="stylesheet" href="https://unpkg.com/mvp.css")
         link(rel="stylesheet", href="/assets/css/styles.css")
         link(rel="stylesheet", href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css')
+        block header
     //-body(oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onkeydown="return false")
     body
         if messages.error 
@@ -31,14 +32,13 @@ html(lang="ko")
                             a(href="/join")  Join |
                         li 
                             a(href="/login") Login |
-
                     li 
-                        a(href="/photos/upload") Upload |
+                        a(href="/search") Search |
                     li 
-                        a(href="/search") Search
+                        a(href="/photos/upload") Upload 
+                   
         main
            block content
         hr
         include partials/footer.pug
         script(src="/assets/js/main.js")
-        
