--- a/src/views/partials/footer.pug
+++ b/src/views/partials/footer.pug
@@ -1,1 +1,34 @@
-footer &copy; #{new Date().getFullYear()} Bijou
+footer 
+    div.copyright
+        div.container
+            div.row
+                p &copy; #{new Date().getFullYear()} All Rights Reserved Bijou 
+            div.row 
+                ul.list-unstyled 
+                    li 
+                        p 상호명 : Bijou 
+                    li 
+                        p 사업자 등록 번호 : 745-51-00008
+                    li 
+                        p 대표자명 : 남욱재
+                    li 
+                        p 사업장 주소지 : 인천 계양구 선주로56번길 16-1, 201호
+                    li 
+                        p 전화번호 : 010-4072-1535
+                    li 
+                        p 통신판매신고번호 : 
+                    li 
+                        p 이메일 : bi_jou19@naver.com
+            div.row 
+                ul.list-unstyled
+                    li.inline 
+                        a(href="/terms/payment").a-unstyled   
+                            p.inline 교환 및 환불 정보
+                    |  | 
+                    li.inline 
+                        a(href="/terms").a-unstyled 
+                            p.inline 이용약관 
+                    |  | 
+                    li.inline 
+                        a(href="/terms/privacy").a-unstyled 
+                            p.inline 개인정보취급방침
