--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -7,6 +7,8 @@
 @import "./screens/watch.scss";
 @import "./screens/terms.scss";
 @import "./screens/payment.scss";
+@import "./screens/search.scss";
+@import "./screens/edit-profile.scss";
 
 // Defaults
 * {
