--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -13,7 +13,7 @@ block content
         h2=`$${photo.price}`
         if loggedIn
             button(type="button" value="결제하기" onclick='requestPay()')
-                |결제하기
+                |카드, 카카오페이, 네이버 페이로 결제하기
         br
         if isAdmin
             a(href=`${photo.id}/edit`) Edit Photo &rarr;
@@ -41,8 +41,11 @@ block content
                             data: {
                                 imp_uid: rsp.imp_uid,
                                 merchant_uid: rsp.merchant_uid,
+                                name : `#{user.name}`,
                                 username : `#{user.username}`,
-                                id : `#{photo.id}`
+                                useremail : `#{user.email}`,
+                                title : `#{photo.title}`,
+                                id:`#{photo.id}`
                             },
                             dataType: "json",
                         }).done(function (data) {
@@ -50,6 +53,9 @@ block content
                                     case "vbankIssued":
                                         break;
                                     case "success":
+                                        if(confirm("구매하였습니다. My Profile에서 구매한 사진집을 보실 수 있습니다. 이동하시겠습니까?") === true) {
+                                            location.href = `/users/#{loggedInUser._id}`
+                                        }
                                         break;
                             }
                         });
