--- a/src/client/scss/screens/changepassword.scss
+++ b/src/client/scss/screens/changepassword.scss
@@ -1,30 +1,29 @@
-.edit-profile-wrap {
+.changePassword {
+    display: block;
+    height: 100%; 
+}
+
+.password-change-wrap {
     margin-left: auto;
     margin-right: auto;
     height: 50vh;
-    width: 50vw;
+    width: 70vw;
     border: 5px solid gray;
     border-radius: 10px;
 }
 
-.edit-profile-wrap form, .edit-profile-wrap input {
+.password-change-wrap form, .password-change-wrap input {
     text-align: center;
 }
 
-.edit-profile-wrap input {
+.password-change-wrap input {
     border: 3px solid black;
     display: block;
     border-radius: 15px;
-    font-weight: 500;
+    font-weight: 300;
     height: 50px;
     margin: 1.5rem;
     margin-left: auto;
     margin-right: auto;
-    font-size: 20px;
-}
-
-.edit-profile-wrap a {
-    display: block;
-    text-align: center;
-    font-size: 15px;
+    font-size: 25px;
 }
