--- a/src/client/scss/screens/search.scss
+++ b/src/client/scss/screens/search.scss
@@ -14,16 +14,14 @@
     .photo-container {
         grid-template-columns: 500px;
     }
-  
 }
 
 @media (max-width: 1200px) {
     .photo-container {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
     }
   
 }
-
 
 .photos {
     width: 400px;
@@ -50,10 +48,13 @@
     height: 10vh;
     width: 30vw;
     border-radius: 30px 0 0 30px;
+    border: 3px solid gray;
 }
 
 .search_submit {
     height: 10vh;
     width: 5vw;
     border-radius: 0 30px 30px 0;
+    border: 3px solid gray;
+    border: 0 3px 3px 3px;
 }
