--- a/src/client/scss/screens/watch.scss
+++ b/src/client/scss/screens/watch.scss
@@ -1,3 +1,7 @@
+main {
+    padding: 3rem;
+}
+
 .img_container {
     text-align: center;
 }
@@ -5,3 +9,4 @@
 .explain_container {
     text-align: center;
 }
+
