--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -6,40 +6,42 @@ html(lang="ko")
         title #{pageTitle} | Bijou
         //- link(rel="stylesheet" href="https://unpkg.com/mvp.css")
         link(rel="stylesheet", href="/assets/css/styles.css")
+        link(rel="preconnect" href="https://fonts.googleapis.com")
+        link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+        link(href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet")
+        script(src="https://kit.fontawesome.com/b17d4fa9e7.js" crossorigin="anonymous")
         link(rel="stylesheet", href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css')
         block header
     //-body(oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onkeydown="return false")
     body
-        if messages.error 
-            +message("error", messages.error)
-        if messages.info 
-            +message("info", messages.info)
-        div.header
-            section.header_logo 
-                a(href="/")
-                    h1 BIJOU  
-            section.navigation
-                ul
-                    if loggedIn 
-                        li 
-                            a(href="/users/edit") Edit Profile |
-                        li 
-                            a(href="/users/logout") LogOut |
-                        li 
-                            a(href=`/users/${loggedInUser._id}`) My Profile |
-                    else
+        header 
+            nav.navbar
+                div.navbar__logo
+                    a(href="/") BIJOU
+
+                ul.navbar__menu
+                    if loggedIn
                         li
-                            a(href="/join")  Join |
+                            a(href="/users/edit") Edit
+                        li
+                            a(href="/users/logout") Log Out
+                        li
+                            a(href=`/users/${loggedInUser._id}`) Profile
                         li 
-                            a(href="/login") Login |
-                    li 
-                        a(href="/search") Search |
-                    if isAdmin
+                            a(href="/search") Search
+                    else 
+                        li
+                            a(href="/join") Join 
                         li 
-                            a(href="/photos/upload") Upload 
+                            a(href="/login") Login
+                    if isAdmin 
+                        li 
+                            a(href="/photos/upload") Upload
+
+                a(href="#" class="navbar__toogleBtn")
+                    i.fas.fa-bars
                    
         main
            block content
-        hr
         include partials/footer.pug
         script(src="/assets/js/main.js")
