--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -5,7 +5,7 @@ block content
         label(for="main") Main photo 
         input(type="file", id="main-photo", name="main", accept="image/*" required) 
         label(for="photos") Photo file
-        input(type="file", id="photos", name="photos", accept=".zip" required)
+        input(type="file", id="photos", name="photos", accept="application/zip" required)
         br
         label 
             h4 상세 정보
