--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -165,6 +165,7 @@ body::-webkit-scrollbar-track {
 footer {
   background-color: #2f3542;
   color: whitesmoke;
+  margin-bottom: 0px;
 }
 
 @keyframes goAway {
@@ -216,3 +217,6 @@ ul {
   padding-inline-start: 40px;
 }
 
+.container {
+  height: 100%;
+}
