--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -26,7 +26,7 @@
 :root{
   --text-color: #f0f4f5;
   --background-color: #263343;
-  --accent-color:#d49466;
+  --accent-color:#ffffff;
 }
 
 body {
@@ -44,6 +44,8 @@ header {
   left: 0;
   right: 0;
 }
+
+
 
 main {
   height: 100%;
