--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -8,3 +8,4 @@ block content
             input(name="username", type="text", required, placeholder="Username", value=loggedInUser.username)
             input(type="submit", value="Update Profile" style="font") 
         a(href="change-password") Change Password &rarr;
+        a(href="delete") secession User &rarr;
