--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -32,7 +32,7 @@ block content
             IMP.init('imp12311505');
             function requestPay() {
                 IMP.request_pay({ 
-                    pg: "inicis",
+                    pg: "inicis.MOI0589946",
                     pay_method: "card",
                     merchant_uid: 'merchant_' + new Date().getTime(),
                     name: `#{photo.title}`,
